2001-10-09  Jeff Freedman  <jeff@amy.nerble.net>

	* Makefile.am (exult_SOURCES): Added monsters.cc, monsters.h.
	* readnpcs.cc,actors.cc,actors.h,actorio.cc:  Actor::read()
	replaces constructors that read.  Special Slime_actor added.

2001-10-08  Jeff Freedman  <jeff@amy.nerble.net>

	* effects.cc (Projectile_effect): Don't attack target if it's
	moved too far away.
	* usecode/ucsched.cc (Usecode_script): Handle 'music' opcode.
	* actors.cc:  When clearing 'sleep' flag, find free spot to stand.
	* exult.cc: Enable keyboard repeat.

	* npcnear.cc: Awakened NPC's shouldn't run proximity Usecode, and
	should go back to sleep after several seconds.
	* gamewin.cc: Sleeping NPC's shouldn't detect theft.
	* gumps/misc_buttons.cc (Combat_button): Update for current combat
	state.
	* schedule.cc (Sleep_schedule),intrinsics.cc: Fixed sleep hang,
	and also position after waking.

2001-10-07  Jeff Freedman  <jeff@amy.nerble.net>

	* effects.cc:  Show text by owner of object if gump not open.
	* actors.cc,gameclk.cc: check_temperature().
	* actors.cc (public): Figure_warmth() written (but not tested).
	* gumps/Stats_gump.cc (Stats_gump): Show frame for temperature if
	Avatar is in frozen region.

2001-10-06  Jeff Freedman  <jeff@amy.nerble.net>

	* actorio.cc,intrinsics.cc,actors.h,flags.h,etc:  Started
	implementing temperature and 'freeze' flag.  No effect yet.

2001-10-06  Dancer Vesperman  <dancer@users.sourceforge.net>

	* actors.cc: Cast conversions
	* gamedat.cc: ditto
	* gamewin.cc: ditto
	* npcnear.cc: ibid
	* schedule.cc: as above

2001-10-05  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* Makefile.be: fixed typo

2001-10-05  Dancer Vesperman  <dancer@users.sourceforge.net>

	* actors.cc: Cast conversions
	* actions.cc: ditto

2001-10-04  Jeff Freedman  <jeff@amy.nerble.net>

	* usecode/ucsched.{cc,h},ucinternal.cc:  terminate() added to
	remove existing scripts for an object if 'no_halt' isn't set.

2001-10-03  Jeff Freedman  <jeff@amy.nerble.net>
